--- a/css/layout.css
+++ b/css/layout.css
@@ -23,10 +23,6 @@ html, body, input, textarea {
     color: #777777;
 }
 
-article p {
-    text-align: left;
-}
-
 h1, h2, h3, h4, h5, h6 {
     font-family: roboto;
     font-weight: bold;
@@ -81,8 +77,44 @@ footer {
     text-align: center;
 }
 
-.work-summary>h5, .work-summary>p {
+.work-entry>h5 {
     text-align: center;
+    margin-bottom: 10px;
+}
+
+.work-entry>p {
+    text-align: left
+}
+
+.work-entry img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.resume>article {
+    margin-bottom: 2em;
+}
+
+.resume>article>div {
+    margin-bottom: 1em;
+}
+
+.resume .italic {
+    font-size: 11px;
+    font-style: italic;
+}
+
+.resume div {
+    font-weight: bold;
+}
+
+.clear-margin {
+    margin-bottom: 2em;
+}
+
+.resume p {
+    font-weight: normal;
+    margin-bottom: 0px;
 }
 
 contact-form > * {
