--- a/css/layout.css
+++ b/css/layout.css
@@ -72,6 +72,10 @@ footer {
     padding-left: 23px;
 }
 
+.about article {
+    padding-top: 10px;
+}
+
 .gallery img {
     margin-bottom: 10px;
 }
@@ -153,7 +157,7 @@ footer {
 
 .contact-form > * {
     display: block;
-
+    width: 100%;
 }
 
 #send-button {
