--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,12 +42,13 @@
 
     <div class="container">
       <nav class="ten columns offset-by-three" role="navigation">
-        <a href="/about"><img src="/images/about-button.png" alt="about"/></a>
-        <a href="/work"><img src="/images/work-button.png" alt="work" /></a>
-        <a href="/"><img id="home-button" src="/images/jucelle-logo.png" alt="home" /></a>
-        <a href="/resume"><img src="/images/resume-button.png" alt="resume" /></a>
-        <a href="/contact"><img src="/images/contact-button.png" alt="contact"  /></a>
+        <a class="button-link about-nav" href="/about"></a>
+        <a class="button-link work-nav" href="/work"></a>
+        <a class="button-link home-nav" href="/"></a>
+        <a class="button-link resume-nav" href="/resume"></a>
+        <a class="button-link contact-nav" href="/contact"></a>
       </nav>
+      <br class="clear" />
       {{ content }}
     </div> <!-- /container -->
     <footer>
