Added scroll up button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
   <body>
 
     <div class="container">
-      <nav class="ten columns offset-by-three" role="navigation">
+      <nav id="nav" class="ten columns offset-by-three" role="navigation">
         <a class="button-link about-nav" href="/about"></a>
         <a class="button-link work-nav" href="/work"></a>
         <a class="button-link home-nav" href="/"></a>
