--- a/_layouts/work_entry.html
+++ b/_layouts/work_entry.html
@@ -5,6 +5,7 @@ layout: default
 <section class="twelve offset-by-two columns work-entry">
   <h5>{{ page.title }}</h5>
   {{ content }}
+  <a class="scroll-button" href="#nav"></a>
 </section>
 <section class="twelve offset-by-two columns gallery omega">
   <hr>
