Updated meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         {{ page.title }} | Jucelle Lim
       {% endif %} 
     </title>
-    <meta name="description" content="Jucelle's Portfolio">
-	  <meta name="author" content="Jucelle Lim">
+    <meta property="description" name="description" content="Jucelle Lim. A designer, illustrator, observer and master doodler currently residing in San Francisco Bay Area.">
+	  <meta property="name" name="author" content="Jucelle Lim">
 
 	  <!-- Mobile Specific Metas
          ================================================== -->
